--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,8 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 
+    <!-- Custom JS -->
+    <script src="{{ "/js/angular.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
+
 </head>
