--- a/_layouts/tile.html
+++ b/_layouts/tile.html
@@ -7,8 +7,8 @@
 
     {% include header.html %}
 
-    <div class="page-content main">
-      <div class="wrap">
+    <div class="main">
+      <div class="tile-wrap">
       {{ content }}
       </div>
     </div>
