--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -153,7 +153,10 @@ a:visited {
   list-style-type: none; }
 
 .posts li {
-  margin-bottom: 30px; }
+  margin-bottom: 30px;
+  padding: 1em;
+  border: solid 1px #7C97C0;
+  box-shadow: 1px 1px 5px #ddd; }
 
 .posts .post-link {
   font-size: 24px;
