--- a/assets/stylesheets/resume.scss
+++ b/assets/stylesheets/resume.scss
@@ -15,20 +15,20 @@
   article {
     margin-top: 3em;
 
-    /* TOOLS */
+    .tools {
+      margin-top: 2em;
 
-    .tag {
-      padding: 0 7px;
-      display: inline-block;
-      border: solid 1px #ddd;
-      margin-left: 3px;
-      margin-bottom: 5px;
-      border-radius: 3px;
-      background-color: #F8F8F8;
-      color: #8B845C;
+      .tag {
+        padding: 0 7px;
+        display: inline-block;
+        border: solid 1px #ddd;
+        margin-left: 3px;
+        margin-bottom: 5px;
+        border-radius: 3px;
+        background-color: #F8F8F8;
+        color: #8B845C;
+      }
     }
-
-    /*  EXPERIENCE SECTION */
 
     &.experience {
       margin-top: 0;
@@ -216,8 +216,20 @@
       font-size: 12px;
     }
 
-    .timeframe, .duration {
+    .timeframe {
       margin: 0;
+      font-size: 16px;
+      margin-left: -5px;
+    }
+
+    .duration {
+      // display inline with timeframe
+      display: inline;
+      position: absolute;
+      top: 0;
+      right: 5px;
+
+      font-size: initial;
     }
 
     .experience-desc {
