--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="{{ "/assets/stylesheets/main.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/assets/stylesheets/layout.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/assets/stylesheets/resume.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/assets/stylesheets/print.css" | prepend: site.baseurl }}" media="print">
+
 
     <!-- Vendor JS -->
     <script src="{{ "/assets/javascript/angular.js" | prepend: site.baseurl }}"></script>
