--- a/assets/stylesheets/layout.scss
+++ b/assets/stylesheets/layout.scss
@@ -148,6 +148,15 @@ body {
 
 .welcome-wrap {
   margin-top: 5em;
+
+
+  .subtext {
+    font-family: 'Rockwell', sans-serif;
+    color: #B4B4B4;
+    padding: 5px;
+    margin-top: 1em;
+  }
+
   .welcome {
     font-size: 3.5em;
     font-family: 'Rockwell', Arial, sans-serif;
