--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -10,8 +10,8 @@
     <div class="page-content main">
       <div class="wrap welcome-wrap">
       <h1 class="welcome">Hello. My name is Amy Hua, and I'm a <br><span class="orange">front-end developer</span> with a love for data.</h1>
-      </div>
-      <div class="doodles">
+
+      <p class="subtext">Freshly built on May 27, 2014.</p>
       </div>
     </div>
 
