More to come! string text appended to subtext

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -11,7 +11,7 @@
       <div class="wrap welcome-wrap">
       <h1 class="welcome">Hello. My name is Amy Hua, and I'm a <br><span class="orange">front-end developer</span> with a love for data.</h1>
 
-      <p class="subtext">Freshly built on May 27, 2014.</p>
+      <p class="subtext">Freshly built on May 27, 2014. More to come!</p>
       </div>
     </div>
 
