--- a/assets/stylesheets/custom.scss
+++ b/assets/stylesheets/custom.scss
@@ -85,6 +85,11 @@
   pre {
     padding: 10px;
   }
+
+  code {
+    padding: 5px;
+    background: #eee;
+  }
   blockquote {
     margin: 20px 10px;
     padding: 5px;
