--- a/assets/stylesheets/resume.scss
+++ b/assets/stylesheets/resume.scss
@@ -41,6 +41,7 @@
       h1 {
         font-size: 17px;
         text-transform: inherit;
+        margin-top: 2px;
       }
       h2 {
         font-size: 15px;
