--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -142,7 +142,7 @@ a:visited {
 /* ----------------------------------------------------------*/
 .page-content {
   padding: 30px 0;
-  background-color: #fff; }
+  background-color: #F8F8F8; }
 
 /* Home styles */
 /* ----------------------------------------------------------*/
@@ -171,13 +171,16 @@ a:visited {
 /* Post styles */
 /* ----------------------------------------------------------*/
 .post-header {
-  margin: 10px 0 30px; }
+  margin: 2em auto;
+  max-width: 600px;
+  text-align: right; }
 
 .post-header h1 {
-  font-size: 42px;
+  font-size: 36px;
   letter-spacing: -1.75px;
   line-height: 1;
-  font-weight: 300; }
+  font-weight: 300;
+  text-align: left; }
 
 .post-header .meta {
   font-size: 15px;
@@ -185,7 +188,10 @@ a:visited {
   margin-top: 5px; }
 
 .post-content {
-  margin: 0 0 30px; }
+  margin: 2em auto;
+  max-width: 600px; }
+  .post-content img {
+    max-width: 600px; }
 
 .post-content > * {
   margin: 20px 0; }
