--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -140,7 +140,7 @@ a:visited { color: #205caa; }
 
 .page-content {
   padding: 30px 0;
-  background-color: #fff;
+  background-color: #F8F8F8;
 }
 
 
@@ -175,13 +175,18 @@ a:visited { color: #205caa; }
 /* Post styles */
 /* ----------------------------------------------------------*/
 
-.post-header { margin: 10px 0 30px; }
+.post-header {
+  margin: 2em auto;
+  max-width: 600px;
+  text-align: right;
+}
 
 .post-header h1 {
-  font-size: 42px;
+  font-size: 36px;
   letter-spacing: -1.75px;
   line-height: 1;
   font-weight: 300;
+  text-align: left;
 }
 
 .post-header .meta {
@@ -190,7 +195,14 @@ a:visited { color: #205caa; }
   margin-top: 5px;
 }
 
-.post-content { margin: 0 0 30px; }
+.post-content {
+  margin: 2em auto;
+  max-width: 600px;
+
+  img {
+    max-width: 600px;
+  }
+}
 
 .post-content > * { margin: 20px 0; }
 
