--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -154,9 +154,18 @@ a:visited {
 
 .posts li {
   margin-bottom: 30px;
-  padding: 1em;
-  border: solid 1px #7C97C0;
-  box-shadow: 1px 1px 5px #ddd; }
+  padding: 1.5em;
+  border: solid 1px #DDDDDD;
+  box-shadow: 1px 1px 5px #ddd;
+  background-color: white;
+  border-radius: 5px;
+  font-weight: 400;
+  max-width: 800px; }
+  .posts li a {
+    color: #696969; }
+    .posts li a:hover {
+      color: orange;
+      transition: color 0.15s; }
 
 .posts .post-link {
   font-size: 24px;
@@ -191,7 +200,7 @@ a:visited {
   margin: 2em auto;
   max-width: 600px; }
   .post-content img {
-    max-width: 600px; }
+    max-width: 100%; }
 
 .post-content > * {
   margin: 20px 0; }
