--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -153,10 +153,22 @@ a:visited { color: #205caa; }
 
 .posts li {
   margin-bottom: 30px;
-  padding: 1em;
-  border: solid 1px #7C97C0;
-  box-shadow: 1px 1px 5px #ddd;
+  padding: 1.5em;
+  border: solid 1px #DDDDDD;
+  box-shadow: 1px 1px 5px #ddd; 
+  background-color: white;
+  border-radius: 5px;
+  font-weight: 400;
+  max-width: 800px;
 
+  a {
+    color: #696969;
+
+    &:hover {
+      color: orange;
+      transition: color 0.15s;
+    }
+  }
 }
 
 .posts .post-link {
@@ -200,7 +212,7 @@ a:visited { color: #205caa; }
   max-width: 600px;
 
   img {
-    max-width: 600px;
+    max-width: 100%;
   }
 }
 
