--- a/assets/stylesheets/resume.css
+++ b/assets/stylesheets/resume.css
@@ -137,7 +137,7 @@
 /*   RESPONSIVE DESIGN   */
 @media (max-width: 980px) {
   .resume-wrap {
-    padding: 25px 10px; }
+    padding: 10px; }
 
   #resume {
     padding: 1.5em;
