--- a/assets/stylesheets/resume.scss
+++ b/assets/stylesheets/resume.scss
@@ -111,9 +111,9 @@
   }
 
   .level {
-    width: 170px;
+    width: 150px;
     display: inline-block;
-    margin: 0 3em 3em 0;
+    margin: 0 32px 10px 0;
     font-size: 14px;
     text-transform: uppercase;
     color: #929292;
