Update resume with Live experience

--- a/assets/stylesheets/resume.css
+++ b/assets/stylesheets/resume.css
@@ -97,6 +97,9 @@
         width: 100%;
         background: #86ca51; }
       #resume .level .fill.fill-90 {
+        width: 95%;
+        background: #86ca51; }
+      #resume .level .fill.fill-90 {
         width: 90%;
         background: #86ca51; }
       #resume .level .fill.fill-80 {
